Updated CV and fixed project logo placement on mobile

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -794,6 +794,8 @@ p{
             }
         }
 
+        // TILE LOGOS
+
         &:first-child{  
             
             &:before{
@@ -801,7 +803,8 @@ p{
                 position: absolute;
                 // left: 13px;
                 margin-top: -40px;
-                margin-left: -70px;
+                // margin-left: -70px;
+                left: 5px;
                 width: 120px;
                 height: 120px;
                 background-image: url(../imgs/electroknight.png);
@@ -822,7 +825,8 @@ p{
                 content: "";
                 position: absolute;
                 margin-top: -40px;
-                margin-left: -60px;
+                // margin-left: -60px;
+                left: 5px;
                 padding: 10px;
                 width: 95px;
                 height: 95px;
@@ -845,7 +849,7 @@ p{
                 margin-top: -30px;
                 padding: 10px;
                 top: 20px;
-                left: 0;
+                left: 5px;
                 padding: 10px;
                 width: 75px;
                 height: 75px;
